<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_hand_up_max">最多只能7人同时发言</string>
    <string name="abc_online_num">在线人数(%1$d)</string>
    <string name="abc_msg_user_name">%1$s:</string>
    <string name="send_msg_hint">请输入内容,不超过100字</string>
    <string name="send_msg">发送</string>
    <string name="controller_size">%1$d人在线</string>
    <string name="abc_clean_wb_msg">确定要删除所有标注吗?</string>
    <string name="abc_del_str">删除</string>
    <string name="abc_my_yunpan">我的云盘</string>
    <string name="abc_computer_upload">电脑快传</string>
    <string name="abc_upload">上传</string>
    <string name="abc_live_setting">设置</string>
    <string name="abc_live_camera">摄像头</string>
    <string name="abc_ble_pen">蓝牙笔</string>
    <string name="abc_beauty">美颜</string>
    <string name="ble_pres">请开启蓝牙权限</string>
    <string name="abc_user_error">获取用户信息失败</string>
    <string name="abc_reset_wb_msg">清除白板中所有内容,此操作不能撤销</string>
    <string name="abc_reset_hint">重置所有</string>
    <string name="abc_agree_up">同意发言</string>
    <string name="abc_cancel_hand_up">取消举手</string>
    <string name="abc_request_speak_up_toast">你已申请发言，等待老师同意</string>
    <string name="abc_request_cancel_speak_up_toast">%1$s取消举手</string>
    <string name="abc_kick_down_mic_toast">老师取消你发言</string>
    <string name="abc_kick_hand_up_toast">老师取消了你的发言申请</string>
    <string name="abc_agree_hand_up_toast">老师同意你发言</string>
    <string name="abc_cancel_up_mic">你已取消发言</string>
    <string name="abc_request_up_mic">%s正在举手</string>
    <string name="abc_request_mine_up_mic">申请发言</string>
    <string name="abc_cancel_speak">取消发言</string>
    <string name="abc_open_camera">打开视频</string>
    <string name="abc_close_camera">关闭视频</string>
    <string name="abc_screen_match">全屏</string>
    <string name="abc_switch_camera">翻转镜头</string>
    <string name="abc_user_status">(%1$s)</string>
    <string name="abc_teacher_str">(老师)</string>
    <string name="abc_live_audio">麦克风</string>
    <string name="abc_mute_all">全体静音</string>
    <string name="abc_video_close">视频已关闭</string>
    <string name="abc_user_can_not_hand_up">该学生已经取消举手了</string>
    <string name="abc_user_is_leave">该学生已经离开了此房间</string>
    <string name="abc_yun_date"> · %1$s</string>
    <string name="abc_preview_str">预览</string>
    <string name="abc_rename">重命名</string>
    <string name="abc_please_input_name">请输入文件名称</string>
    <string name="abc_update_success">修改成功</string>
    <string name="abc_update_error">修改失败</string>
    <string name="abc_del_success">删除成功</string>
    <string name="abc_del_fail">删除失败</string>
    <string name="abc_del_msg">您确定要删除此文档吗?删除后不可恢复</string>
    <string name="abc_download_fail">下载失败</string>
    <string name="abc_network_busy">当前网络较差</string>
    <string name="abc_cancel_edit">请先退出编辑模式</string>
    <string name="full_screen_video">全屏</string>
    <string name="abc_disable_chat">你已经被禁止聊天</string>
    <string name="abc_agree">同意</string>
    <string name="abc_invite_speak">邀请发言</string>
    <string name="abc_enable_chat">取消禁止聊天</string>
    <string name="abc_disable_chat_dialog">禁止聊天</string>
    <string name="abc_enable_speak">取消禁止发言</string>
    <string name="abc_disable_speak">禁止发言</string>
    <string name="abc_mute_user_mic">你已被禁止发言</string>
    <string name="abc_user_rove_speak_false">%1$s拒绝了发言邀请</string>
    <string name="abc_user_rove_speak_true">%1$s已接受发言邀请</string>
    <string name="abc_match_user_up">发言人数已达上限</string>
    <string name="abc_cancel_disable_chat">禁止聊天已取消</string>
    <string name="abc_cancel_mute_user_mic">禁止发言已取消</string>
    <string name="abc_disable_chat_error">请先取消该学生发言</string>
    <string name="abc_kit_out_user">您确定将%1$s学生踢出教室吗?</string>
    <string name="abc_kit_out_user_dialog">踢出教室</string>
    <string name="abc_kit_out">踢出</string>
    <string name="abc_time_hint">当前课程十分钟后结束！</string>
    <string name="abc_room_close">亲爱的老师，下课啦</string>
    <string name="abc_will_finish">课程即将结束,请注意时间</string>
    <string name="abc_other_hand_up">%1s正在举手</string>
    <string name="abc_login_please">请先登录</string>
    <string name="abc_manager_join">班主任进入教室</string>
    <string name="abc_manager_leave">班主任离开教室</string>
    <string name="abc_rtmp_stream_error">获取直播地址异常</string>
    <string name="abc_open_gallery_error">打开相册失败</string>
    <string name="abc_cant_not_open_camera">当前设备不支持拍照</string>
    <string name="abc_student_name">学生姓名</string>
    <string name="abc_options">选项</string>
    <string name="abc_duration">用时</string>
    <string name="abc_dati_detail">答题详情</string>
    <string name="abc_percent">百分比</string>
    <string name="abc_dati">答题卡</string>
    <string name="abc_dati_attetion">注：绿色为正确选项</string>
    <string name="abc_question_type">设置题目类型</string>
    <string name="abc_single_select">单选</string>
    <string name="abc_multi_select">多选</string>
    <string name="abc_yesno_select">判断</string>
    <string name="abc_set_correct">设置正确答案</string>
    <string name="abc_progress">进度</string>
    <string name="abc_accuracy">正确率</string>
    <string name="abc_submit">提交</string>
    <string name="abc_correct_answer">恭喜你答对了！</string>
    <string name="abc_wrong_answer">很遗憾您答错了,正确答案是 %s</string>
    <string name="abc_right">对</string>
    <string name="abc_wrong">错</string>
    <string name="abc_stop_dati">收卡</string>
    <string name="abc_stop_answer_hint">收卡后学生将不能继续答题，确定收卡吗？</string>
    <string name="abc_teacher_already_stop_answer">老师已收卡</string>
    <string name="abc_select_corret_answer">请选择正确答案！</string>
    <string name="abc_time_confirm">我知道了</string>
    <string name="abc_room_finish">课程已结束</string>
    <string name="abc_show_room_id">&#160;(&#160;%1$s&#160;)&#160;</string>
    <string name="bluetooth_not_supported">系统不支持蓝牙</string>
    <string name="bluetooth_open">系统蓝牙已开启</string>
    <string name="abc_temp_leave">暂时离开</string>
    <string name="abc_leave_class">结束课程</string>
    <string name="abc_manager_str">班主任</string>
    <string name="abc_host_str">老师</string>
    <string name="abc_exit_str">现在退出课程?</string>
    <string name="abc_connect_error">您连接不上您的教室，请再试一试？</string>
    <string name="abc_host_leave">老师暂时离开教室</string>
    <string name="abc_host_not_in">老师不在教室</string>
    <string name="abc_host_in">老师进入教室</string>
    <string name="abc_invite_str">老师邀请你发言</string>
    <string name="abc_system_msg">系统消息</string>
    <string name="abc_start_course">上课时间到了！</string>
    <string name="abc_evaluation_hint">请输入评价内容(100字内)</string>
    <string name="abc_please_down_mic_user">请先取消一个学生发言</string>
    <string name="abc_share_wb">共享白板</string>
    <string name="un_share_wb">停止共享</string>
    <string name="abc_wb_shared">您的白板已被老师共享</string>
    <string name="abc_wb_share_to_user">老师共享了%1$s的白板</string>
    <string name="abc_wb_un_share_to_user">%1$s的白板已停止共享</string>
    <string name="abc_please_un_share_user">请先取消%1$s白板共享</string>
    <string name="abc_user_wb">%1$s的白板</string>
    <string name="abc_mine_wb">我的白板</string>
</resources>